<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
    	android:id="@+id/welcome"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/hello"
		/>
    
	<TextView
        android:id="@+id/stats"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/stats"
        android:textStyle="bold"
        android:textColor="#ff9900"
		/>
	
	<LinearLayout
    	xmlns:android="http://schemas.android.com/apk/res/android"
    	android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:orientation="horizontal" >
	    <Button
    	    android:id="@+id/new_entry"
        	android:layout_width="fill_parent"
        	android:layout_height="wrap_content"
        	android:text="@string/new_entry"
        	android:layout_weight="0.5"
        	/>    
    	<Button
	        android:id="@+id/delete"
        	android:layout_width="fill_parent"
        	android:layout_height="wrap_content"
        	android:text="@string/delete"
        	android:layout_weight="0.5"
        	/>
	</LinearLayout>
	
	<TextView
		android:id="@id/android:empty"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
        android:text="@string/no_notes"
		/>

	<GridView
	    android:id="@+id/grid_view"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:numColumns="3" >
	</GridView>
	
</LinearLayout>