<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/date"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="date"
        android:hint="@string/date" >
        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/station"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/station" />

    <Button
        android:id="@+id/save"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/save" />

</LinearLayout>